Completed Ride Page User Feedback Work Done

--- a/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
+++ b/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
@@ -405,14 +405,21 @@
                             <Border BorderBrush="#A9ABB1" Height="35" 
                                     Background="#F5F5F5"
                                     BorderThickness="1" CornerRadius="5" IsEnabled="False" Margin="10,0,0,0">
-                                <StackPanel Orientation="Horizontal" Margin="5">
+                                <!--<StackPanel Orientation="Horizontal" Margin="5">
                                     <Image Source="/Images/FeedBackYellowStar.png" Height="20" Margin="5,0,0,0"/>
                                     <Image Source="/Images/FeedBackYellowStar.png" Height="20" Margin="5,0,0,0"/>
                                     <Image Source="/Images/FeedBackYellowStar.png" Height="20" Margin="5,0,0,0"/>
                                     <Image Source="/Images/FeedBackYellowStar.png" Height="20" Margin="5,0,0,0"/>
                                     <Image Source="/Images/FeedBackYellowStar.png" Height="20" Margin="5,0,0,0"/>
-                                </StackPanel>
-                            </Border>
+                                </StackPanel>-->
+                                        <StackPanel Orientation="Horizontal" Margin="5">
+                                            <Image Source="{Binding UserFeedback_Image_Rating1}" Height="20" Margin="5,0,0,0"/>
+                                            <Image Source="{Binding UserFeedback_Image_Rating2}" Height="20" Margin="5,0,0,0"/>
+                                            <Image Source="{Binding UserFeedback_Image_Rating3}" Height="20" Margin="5,0,0,0"/>
+                                            <Image Source="{Binding UserFeedback_Image_Rating4}" Height="20" Margin="5,0,0,0"/>
+                                            <Image Source="{Binding UserFeedback_Image_Rating5}" Height="20" Margin="5,0,0,0"/>
+                                        </StackPanel>
+                                    </Border>
 
 
                         </StackPanel>
@@ -447,7 +454,7 @@
                                 </Label.Template>
                             </Label>
                             <Border  BorderBrush="#A9ABB1" Height="35" BorderThickness="1" CornerRadius="5" >
-                                <StackPanel Orientation="Horizontal" Margin="5">
+                                <!--<StackPanel Orientation="Horizontal" Margin="5">
                                     <Button  Height="20" Width="22" Margin="5,0,0,0" BorderBrush="Transparent" Command="{Binding Image_Rating1_Comand}" IsEnabled="{Binding ShowSaveBTn}">
                                         <Button.Background>
                                             <ImageBrush ImageSource="{Binding Image_Rating1}"/>
@@ -474,8 +481,36 @@
                                             <ImageBrush ImageSource="{Binding Image_Rating5}"/>
                                         </Button.Background>
                                     </Button>
-                                </StackPanel>
-                            </Border>
+                                </StackPanel>-->
+                                        <StackPanel Orientation="Horizontal" Margin="5">
+                                            <Button  Height="20" Width="22" Margin="5,0,0,0" BorderBrush="Transparent" Command="{Binding Image_Rating1_Comand}" IsEnabled="{Binding ShowSaveBTn}">
+                                                <Button.Background>
+                                                    <ImageBrush ImageSource="{Binding Image_Rating1}"/>
+                                                </Button.Background>
+                                            </Button>
+
+                                            <Button  Height="20" Width="22" Margin="5,0,0,0" BorderBrush="Transparent" Command="{Binding Image_Rating2_Comand}" IsEnabled="{Binding ShowSaveBTn}">
+                                                <Button.Background>
+                                                    <ImageBrush ImageSource="{Binding Image_Rating2}"/>
+                                                </Button.Background>
+                                            </Button>
+                                            <Button  Height="20" Width="22" Margin="5,0,0,0" BorderBrush="Transparent" Command="{Binding Image_Rating3_Comand}" IsEnabled="{Binding ShowSaveBTn}">
+                                                <Button.Background>
+                                                    <ImageBrush ImageSource="{Binding Image_Rating3}"/>
+                                                </Button.Background>
+                                            </Button>
+                                            <Button  Height="20" Width="22" Margin="5,0,0,0" BorderBrush="Transparent" Command="{Binding Image_Rating4_Comand}" IsEnabled="{Binding ShowSaveBTn}">
+                                                <Button.Background>
+                                                    <ImageBrush ImageSource="{Binding Image_Rating4}"/>
+                                                </Button.Background>
+                                            </Button>
+                                            <Button  Height="20" Width="22" Margin="5,0,0,0" BorderBrush="Transparent" Command="{Binding Image_Rating5_Comand}" IsEnabled="{Binding ShowSaveBTn}">
+                                                <Button.Background>
+                                                    <ImageBrush ImageSource="{Binding Image_Rating5}"/>
+                                                </Button.Background>
+                                            </Button>
+                                        </StackPanel>
+                                    </Border>
                         </StackPanel>
 
 
