--- a/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
+++ b/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
@@ -534,21 +534,25 @@
                                     <ColumnDefinition Width="auto" />
                                 </Grid.ColumnDefinitions>
                                 <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="0" Margin="0,0,10,0">
-                                    <CheckBox   Height="22"  Foreground="Black" Width="21"/>
+                                            <CheckBox IsChecked="{Binding inFlightService}" Height="22"  Foreground="Black" Width="21"/>
                                     <Label Content="In-flight service"/>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="1" Margin="0,0,10,0">
-                                    <CheckBox   Height="22"  Foreground="Black" Width="21"/>
+                                            <CheckBox IsChecked="{Binding flightControl}" Height="22"  Foreground="Black" Width="21"/>
                                     <Label Content="Flight control"/>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal" Margin="0,0,10,0" Grid.Row="0" Grid.Column="2">
-                                    <CheckBox   Height="22"  Foreground="Black" Width="21"/>
+                                            <CheckBox IsChecked="{Binding communication}" Height="22"  Foreground="Black" Width="21"/>
                                     <Label Content="Communication"/>
                                 </StackPanel>
 
 
                             </Grid>
-                            <TextBox SelectedText="Type Feedback" SelectionTextBrush="#A9ABB1" Height="30" Margin="0,10,0,0" Foreground="Black"/>
+                            <TextBox SelectedText="Type Feedback"
+                                     Text="{Binding FlightFeedback}"
+                                     SelectionTextBrush="#A9ABB1" Height="30"
+                                     Margin="0,10,0,0" 
+                                     Foreground="Black"/>
                         </StackPanel>
                     </Grid>
                 </Border>
