CompletedRidePAge GUI Binding and GetFlightfeedback Done

--- a/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
+++ b/ideaForge/Pages/DashboardPages/CompletedRidePage.xaml
@@ -549,7 +549,7 @@
 
                             </Grid>
                             <TextBox SelectedText="Type Feedback"
-                                     Text="{Binding FlightFeedback}"
+                                     Text="{Binding feedbackComments}"
                                      SelectionTextBrush="#A9ABB1" Height="30"
                                      Margin="0,10,0,0" 
                                      Foreground="Black"/>
