--- a/ideaForge/Pages/LoginPages/MainWindow.xaml
+++ b/ideaForge/Pages/LoginPages/MainWindow.xaml
@@ -25,7 +25,7 @@
             <RowDefinition Height="35"/>
             <!--Text box4-->
             <RowDefinition Height="30"/>
-            <!--Space5-->
+            <!--Error Label5-->
             <RowDefinition Height="40"/>
             <!--Button6-->
             <RowDefinition Height="30"/>
@@ -86,6 +86,13 @@
                 </Style>
             </TextBox.Resources>
         </TextBox>
+        <Label Content="Enter a valid Email / Phone" Grid.Row="5"
+               FontWeight="SemiBold" VerticalAlignment="Center" 
+               HorizontalAlignment="Left" 
+               Margin="5,0,0,0"
+               Grid.Column="2"
+               Foreground="Red"
+               Visibility="Hidden"/>
         <Button  Grid.Row="6" Grid.Column="0" x:Name="Send" BorderThickness="1" Margin="10,0,10,0" 
                    BorderBrush="Transparent"
                 Content="CONTINUE" 
