--- a/ideaForge/Pages/DashboardPages/UserManagementPage.xaml
+++ b/ideaForge/Pages/DashboardPages/UserManagementPage.xaml
@@ -47,7 +47,45 @@
                 <DataGridTemplateColumn  Header="Pilot Name" Width="*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <StackPanel Orientation="Horizontal" >
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="3*"/>
+                                    <ColumnDefinition Width="2*"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Label 
+                                    Grid.Column="0"
+                                    Content="{Binding pilotName}" FontWeight="SemiBold"/>
+
+                                <Button 
+                                    Width="60"
+                                    Height="20"
+                                    Grid.Column="1"
+                                    Content="Active" Command="{Binding }" 
+                                    Background="#E8F4D9"
+                                    TextElement.Foreground="#91C84F"
+                                    BorderThickness="0" Padding="15,0"
+                                    BorderBrush="#5D9115"
+                                    FontSize="10">
+                                    <Button.Resources >
+                                        <Style TargetType="{x:Type Button}">
+
+                                            <Style.Resources>
+                                                <Style TargetType="{x:Type Border}">
+                                                    <Setter Property="CornerRadius" Value="10" />
+                                                    <Style.Triggers>
+                                                        <Trigger Property="IsMouseOver" Value="True">
+                                                            <Setter Property="Background" Value="#5D9115"/>
+                                                        </Trigger>
+                                                    </Style.Triggers>
+                                                </Style>
+
+                                            </Style.Resources>
+                                        </Style>
+                                    </Button.Resources>
+                                </Button>
+                            </Grid>
+                            <!--<StackPanel Orientation="Horizontal" >
                                 <Label Content="{Binding pilotName}" FontWeight="SemiBold">
                                 </Label>
                                 <Button Content="Active" Command="{Binding }"  Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="15,0">
@@ -70,7 +108,7 @@
                                         </Style>
                                     </Button.Resources>
                                 </Button>
-                            </StackPanel>
+                            </StackPanel>-->
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
