--- a/ideaForge/Pages/DashboardPages/UserManagementPage.xaml
+++ b/ideaForge/Pages/DashboardPages/UserManagementPage.xaml
@@ -115,7 +115,53 @@
                 <DataGridTemplateColumn CanUserSort="True" Header="Flights requested" Width="*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
+
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Label
+                                    Grid.Column="0" HorizontalAlignment="Center"
+                                    Content="{Binding TotalRequestedByUser}"/>
+                                <Button 
+                                    Width="50"
+                                    Height="15"
+                                    Content="View" 
+                                    Command="{Binding 
+                                    RelativeSource={RelativeSource 
+                                    AncestorType={x:Type UserControl}}, 
+                                    Path=DataContext.ViewCommand}"
+                                    CommandParameter="1"   
+                                    Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="10,0"
+                                    Grid.Column="1"
+                                    HorizontalAlignment="Center"
+                                    VerticalAlignment="Center"
+                                    FontSize="10">
+                                    <Button.Resources >
+                                        <Style TargetType="{x:Type Button}">
+
+                                            <Style.Resources>
+                                                <Style TargetType="{x:Type Border}">
+                                                    <Setter Property="CornerRadius" Value="8" />
+
+
+                                                    <Style.Triggers>
+                                                        <Trigger Property="IsMouseOver" Value="True">
+                                                            <Setter Property="Background" Value="#5D9115"/>
+                                                        </Trigger>
+                                                    </Style.Triggers>
+                                                </Style>
+
+                                            </Style.Resources>
+                                        </Style>
+                                    </Button.Resources>
+                                </Button>
+                                
+                            </Grid>
+                            
+                            <!--<StackPanel Orientation="Horizontal">
                             <Label Content="{Binding TotalRequestedByUser}"/>
                                 <Button Content="View" 
                                         Command="{Binding 
@@ -143,7 +189,7 @@
                                         </Style>
                                     </Button.Resources>
                                 </Button>
-                            </StackPanel>
+                            </StackPanel>-->
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
