--- a/ideaForge/Pages/DashboardPages/UserManagementPage.xaml
+++ b/ideaForge/Pages/DashboardPages/UserManagementPage.xaml
@@ -274,7 +274,48 @@
 
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <StackPanel Orientation="Horizontal">
+
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+
+                                <Label Grid.Column="0"
+                                       HorizontalAlignment="Center"
+                                       VerticalAlignment="Center"
+                                       Content="{Binding TotalAcceptedRidesByUser}"/>
+
+                                <Button Content="View"   Command="{Binding 
+                                        RelativeSource={RelativeSource 
+                                        AncestorType={x:Type UserControl}}, 
+                                        Path=DataContext.ViewCommand}"
+                                        Width="50"
+                                        Height="15"
+                                        FontSize="10"
+                                        CommandParameter="2" Background="#E8F4D9" TextElement.Foreground="#91C84F" BorderThickness="0" Padding="10,0">
+                                    <Button.Resources >
+                                        <Style TargetType="{x:Type Button}">
+
+                                            <Style.Resources>
+                                                <Style TargetType="{x:Type Border}">
+                                                    <Setter Property="CornerRadius" Value="10" />
+
+
+                                                    <Style.Triggers>
+                                                        <Trigger Property="IsMouseOver" Value="True">
+                                                            <Setter Property="Background" Value="#5D9115"/>
+                                                        </Trigger>
+                                                    </Style.Triggers>
+                                                </Style>
+
+                                            </Style.Resources>
+                                        </Style>
+                                    </Button.Resources>
+                                </Button>
+                            </Grid>
+                            
+                            <!--<StackPanel Orientation="Horizontal">
                                 <Label Content="{Binding TotalAcceptedRidesByUser}"/>
                                 <Button Content="View"   Command="{Binding 
                                         RelativeSource={RelativeSource 
@@ -300,7 +341,7 @@
                                         </Style>
                                     </Button.Resources>
                                 </Button>
-                            </StackPanel>
+                            </StackPanel>-->
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
 
